--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,25 +7,371 @@ body{
 
 .navbar {
     width: 100%;
-    background-color: #3d4d6a;
- 
+    /* background-color: #3d4d6a; */
+
     * {
-       color: white;
+        color: white;
     }
- 
+
+    .mouni:hover {
+        color: brown;
+    }
+
     .btn {
-       border-radius: 10px;
-       background-color: none;
+        border-radius: 10px;
+        background-color: none;
     }
- 
-    #navbarSupportedContent {
-       border: none;
-       outline: none;
-       box-shadow: none;
- 
-       #Dashboard {
-          border: none;
-          outline: none;
-       }
+
+    .navbarSupportedContent {
+        border: none;
+        outline: none;
+        box-shadow: none;
+
+        #Dashboard {
+            border: none;
+            outline: none;
+        }
     }
- }
+}
+
+#home {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    padding: 100px;
+    width: 100%;
+    height: 700px;
+    background-image: url(https://assets-v2.scaler.com/assets/academy/svg/banner-background-34136d3a9ddff172e6bae6e3d8283c452231dcda2196b055bfa2e34e222754b7.svg);
+
+    #home1 {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: start;
+        gap: 20px;
+
+        #h11 {
+            font-size: 40px;
+            font-weight: bold;
+            color: white;
+        }
+
+        #h12 {
+            font-size: 24px;
+            color: white;
+
+            b {
+                font-size: 30px;
+            }
+        }
+
+        #h13 {
+            display: flex;
+            flex-direction: row;
+            align-items: start;
+            justify-content: start;
+            gap: 20px;
+
+            button {
+                padding: 10px;
+                background-color: red;
+                color: white;
+            }
+
+            #h15 {
+                background-color: white;
+                color: skyblue;
+            }
+
+        }
+
+        #h14 {
+            color: white;
+
+            a {
+                color: orange;
+            }
+        }
+    }
+
+    #home2 {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: start;
+        box-shadow: 0 0 10px rgb(241, 212, 212);
+        overflow: scroll;
+        padding: 60px;
+        height: 400px;
+        background-color: white;
+
+
+        h2 {
+            color: black;
+
+            a{
+                color: brown;
+            }
+        }
+
+        #label1 {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            justify-content: start;
+            gap: 20px;
+
+            #name{
+                width: 250px;
+                height: 40px;
+            }
+        }
+
+        #label2 {
+            display: flex;
+            flex-direction: row;
+            align-items: start;
+            justify-content: start;
+            gap: 15px;
+        }
+
+        #label3 {
+            display: flex;
+            flex-direction: row;
+            align-items: start;
+            justify-content: start;
+            gap: 15px;
+        }
+
+        #mix{
+            display: flex;
+            flex-direction: row;
+            flex-direction: start;
+            align-items: start;
+            gap: 20px;
+
+            #book{
+                padding: 8px;
+                background-color: red;
+                color: white;
+            }
+
+            #mix1{
+                display: flex;
+                flex-direction: row;
+                align-items: start;
+                justify-content: start;
+
+                #img{
+                    height: 20px;
+                    width: 20px;
+                }
+
+                #seat{
+                    font-size: 20px;
+                }
+
+
+            }
+
+        }
+    }
+}
+
+#problem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 25px rgb(241, 212, 212);
+    padding: 60px;
+    gap: 40px;
+    margin-top: -50px;
+    z-index: 1;
+    background-color: white;
+
+    #d10{
+        font-size: 35px;
+    }
+
+    #pro1{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+
+        #prob11{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            background-color: #0f8cff;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+            padding: 20px;
+            height: 200px;
+            width: 350px;
+
+            #prob1{
+                font-size: 30px;
+                color: white;
+            }
+        }
+
+        #prob2{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 20px;
+            height: 200px;
+            width: 350px;
+            background-color: #ea576f;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+
+            #prob16{
+                font-size: 25px;
+                color: white;
+            }
+        }
+
+        #prob3{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            /* border: 2px black solid; */
+            padding: 20px;
+            height: 200px;
+            width: 350px;
+            background-color: #5cdb57;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+
+            #prob16{
+                font-size: 25px;
+                color: white;
+            }
+        }
+    }
+    
+
+    #pro2{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+
+        #prob4{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            /* border: 2px black solid; */
+            padding: 20px;
+            height: 200px;
+            width: 350px;
+            background-color: #4c96e5;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+
+            #prob1{
+                font-size: 30px;
+                color: white;
+            }
+        }
+
+        #prob5{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            /* border: 2px black solid; */
+            padding: 20px;
+            height: 200px;
+            width: 350px;
+            background-color: #fca733;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+
+            #prob16{
+                font-size: 25px;
+                color: white;
+            }
+        }
+
+        #prob6{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            /* border: 2px black solid */
+            padding: 20px;
+            height: 200px;
+            width: 350px;
+            background-color: #a768d7;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+
+            #prob16{
+                font-size: 25px;
+                color: white;
+            }
+        }
+    }
+}
+
+#problem1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 70px;
+    gap: 30px;
+
+    #h5{
+        font-size: 30px;
+        b{
+            text-decoration: underline;
+        }
+        /* text-decoration: underline; */
+    }
+
+    #missed{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+
+        #work{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border: 2px grey solid;
+            box-shadow: 0 0 25px rgb(241, 212, 212);
+            /* height: ; */
+            height: 200px;
+            width: 350px;
+            padding: 20px;
+
+            #l1{
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            #l2{
+                text-align: center;
+            }
+            
+
+
+        }
+    }
+}
